# ranks-test

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entry.sh  pyproject.toml  readme.md  tes.py
data/db/base/1/: 2619
data/db/base/13757/: 1247  1249  1259  16385  16386  16392  16394  16395  16399  16401  16403  16404  16408  16410  16417  16419  16424  16426  16427  16431  16433  16435  16442  16447  16449  16456  16457  16458  16471  16472  16473  16485  16486  16487  16499  16500  16501  16502  16508  16509  (+63 more)
data/db/global/: 1260  pg_control  pg_internal.init
data/db/pg_stat/: db_0.stat  db_13757.stat  global.stat
data/db/pg_xact/: 0000
nginx/: nginx.conf
payment/: admin.py  models.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_alter_order_discount_alter_order_tax.py  0003_alter_order_discount_alter_order_tax.py
ranks/: settings.py  urls.py
static/payment/: main.js
templates/payment/: cancel.html  payment.html  success.html
