[tool.poetry]
name = "ranks"
version = "0.1.0"
description = ""
authors = ["Daniel <matsubus@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

